# rules_mobile_assets

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.github/workflows/: release.yaml  release_prep.sh
docs/: android.md  apple.md  common.md  docs.md  ios.md  macos.md
examples/: BUILD.bazel  MODULE.bazel  WORKSPACE
examples/assets/: BUILD.bazel
mobile_assets/: BUILD.bazel  android.bzl  apple.bzl  defs.bzl  ios.bzl  macos.bzl  providers.bzl  repositories.bzl  setup.bzl
mobile_assets/private/: BUILD.bazel  android.bzl  apple.bzl  common.bzl  defs.bzl  extensions.bzl  ios.bazel  ios.bzl  macos.bzl  providers.bzl  utils.bzl
mobile_assets/private/scripts/: BUILD
mobile_assets/private/templates/: BUILD  apple_color_template.tpl  apple_image_template.tpl
tools/imagemagick/: BUILD.bazel
tools/resizer/: BUILD  Cargo.toml
tools/resizer/src/: main.rs
