load("@rules_mobile_assets//mobile_assets:ios.bzl", "ios_assets")
load("@rules_mobile_assets//mobile_assets:apple.bzl", "additional_plist")
load("@rules_mobile_assets//mobile_assets:macos.bzl", "macos_assets")
load("@rules_mobile_assets//mobile_assets:android.bzl", "android_assets")

ios_assets(
    name = "ios_asset",
    resources = "//assets:shared_assets"
)

macos_assets(
    name = "macos_asset",
    resources = "//assets:shared_assets"
)

android_assets(
    name = "android_asset",
    resources = "//assets:shared_assets"
)

additional_plist(
    name = "new_plist",
    resources = "//assets:shared_assets"
)
