load("@rules_mobile_assets//mobile_assets:defs.bzl", "shared_assets", "image_resource", "color_resource", "color_asset", "string_resource", "string_collection")

shared_assets(
    name = "shared_assets",
    app_icon = "icons/Bazel_logo.svg",
    images = [":example", "example_2"],
    # icons = ["icons/Bazel_logo_2.svg"],
    colors = ["example_color"],
    strings = "locales",
    visibility = ["//visibility:public"],
    others = ["images/other.txt"]
)

image_resource(
    name = "example",
    base_image = "images/universal.png"
)

image_resource(
    name = "example_2",
    base_image = "images/universal_2.png"
)

color_resource(
    name = "example_color",
    base_color = "example_color_base",
    dark_theme = "example_color_dark",
)

color_asset(
    name = "example_color_base",
    alpha = 255,
    red = 150,
    green = 20,
    blue = 100,
)

color_asset(
    name = "example_color_dark",
    alpha = 1,
    red = 150,
    green = 20,
    blue = 100,
)

string_collection(
    name = "locales",
    base_language = "it",
    localizations = ["example_string", "NSCameraUsageDescription"]
)

string_resource(
    name = "example_string",
    values = {
        "it": "la mia stringa",
        "en": "My string",
    }
)

string_resource(
    name = "NSCameraUsageDescription",
    values = {
        "it": "la mia stringa",
        "en": "My string",
    }
)
