load(
    "@rules_mobile_assets//mobile_assets:defs.bzl",
    "color_asset",
    "color_resource",
    "image_resource",
    "shared_assets",
    "string_collection",
    "string_resource",
)

shared_assets(
    name = "shared_assets",
    app_icon = "icons/Bazel_logo.svg",
    colors = ["example_color"],
    images = [
        ":example",
        "example_2",
    ],
    others = ["images/other.txt"],
    strings = "locales",
    visibility = ["//visibility:public"],
)

image_resource(
    name = "example",
    base_image = "images/universal.png",
)

image_resource(
    name = "example_2",
    base_image = "images/universal_2.png",
)

color_resource(
    name = "example_color",
    base_color = "example_color_base",
    dark_theme = "example_color_dark",
)

color_asset(
    name = "example_color_base",
    alpha = 255,
    blue = 100,
    green = 20,
    red = 150,
)

color_asset(
    name = "example_color_dark",
    alpha = 1,
    blue = 100,
    green = 20,
    red = 150,
)

string_collection(
    name = "locales",
    base_language = "it",
    localizations = [
        "example_string",
        "NSCameraUsageDescription",
    ],
)

string_resource(
    name = "example_string",
    values = {
        "it": "la mia stringa",
        "en": "My string",
    },
)

string_resource(
    name = "NSCameraUsageDescription",
    values = {
        "it": "la mia stringa",
        "en": "My string",
    },
)
