load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make", "configure_make_variant")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

configure_make(
    name = "libimagemagick",
    configure_in_place = True,
    configure_options = [
        "--enable-static",
        "--disable-shared",
        "--enable-osx-universal-binary=no",
        "--disable-silent-rules",
        "--disable-opencl",
        "--with-freetype=yes",
        "--with-gvc=no",
        "--with-modules",
        "--with-openjp2",
        "--with-openexr",
        "--with-webp=yes",
        "--with-heic=yes",
        "--with-raw=yes",
        "--with-gslib",
        # "--with-gs-font-dir=#{HOMEBREW_PREFIX}/share/ghostscript/fonts",
        "--with-lqr",
        "--without-djvu",
        "--without-fftw",
        "--without-pango",
        "--without-wmf",
        "--enable-openmp",
        #"--prefix=/libTIFF",
    ],
    env = select({
        "@platforms//os:macos": {"AR": ""},
        "//conditions:default": {},
    }),
    lib_source = ":all_srcs",
    out_binaries = ["magick"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "imagemagick",
    srcs = [":libimagemagick"],
    output_group = "magick",
    visibility = ["//visibility:public"],
)

native_binary(
    name = "magick",
    src = ":imagemagick",
    visibility = ["//visibility:public"],
)
